--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "socket.io-client": "^4.0.1"
+    "socket.io-client": "^4.0.1",
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -24,7 +26,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^6.0.0",
-    "lint-staged": "^11.0.0"
+    "lint-staged": "^11.0.0",
+    "postcss": "^8.2.15"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --fix"
