--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.0",
     "socket.io-client": "^4.0.1",
     "tailwindcss": "^2.1.2"
   },
