--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
     "socket.io-client": "^4.0.1",
+    "tailwind-scrollbar": "^1.3.0",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
